# clicode

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.py  pyproject.toml  run.py
clicode/: __init__.py  agent.py  agent_settings.py  agent_system_instructions.py  agent_system_instructions_optimized.py  main.py
clicode/security/: advanced_patch_system.py  exa_domains.py  file_validation.py  security.py
clicode/tools/: __init__.py  command_tools.py  file_tools.py  project_tools.py
src/: __init__.py  agent.py  agent_settings.py
src/tools/: __init__.py  command_tools.py  file_tools.py
