[project]
name = "agno-coder-assistant"
version = "0.1.0"
description = "Agente asistente codificador usando Agno"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.5.4",
    "sqlalchemy>=2.0.0",
    "mistralai>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "codespell>=2.4.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.11",
]
