[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clicode"
version = "0.1.0"
description = "Coding assistant agent"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Rey", email = "reynaldosuarezprieto@gmail.com"},
]
license = {text = "MIT"}
keywords = ["ai", "coding", "assistant", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "agno>=1.5.4",
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.9.1",
    "openai>=1.82.0",
    "chardet>=5.2.0",
    "python-magic>=0.4.27",
    "pygithub>=2.6.1",
    "exa-py>=1.13.1",
]

[project.scripts]
clicode = "clicode.main:main"

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "codespell>=2.4.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.11",
]
